--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="Musica, musica latina, musica pop, musica alternativa, rock, playlist">
 
     <link rel="stylesheet" href="/style.css">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <header>
@@ -18,53 +21,56 @@
     </header>
 
 <main>
-    <div>
-        <img src="/Assets/song.jpg" alt="">
-        <h1>Die With A Smile</h1>
-        <h2>Lady Gaga, Bruno Mars</h2>
-    </div>
+    <div id="track-list">
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/song.jpg" class="rounded-full h-16" alt="">
+            <h3>Die With A Smile</h3> 
+            <p class="opacity-40">Lady Gaga, Bruno Mars</p>
+        </div>
 
-    <div>
-        <img src="/Assets/Rawayana.jpg" alt="">
-        <h1>Hora Loca</h1>
-        <h2>Rawayana, Monsiur Perine</h2>
-    </div>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/Rawayana.jpg" class="rounded-full h-16" alt="">
+            <h1>Hora Loca</h1>
+            <p class="opacity-40">Rawayana, Monsiur Perine<p>
+        </div>
 
-    <div>
-        <img src="/Assets/the weeknd.jpg" alt="">
-        <h1>Blinding Lights</h1>
-        <h2>The Weeknd</h2>
-    </div>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/the weeknd.jpg" class="rounded-full h-16" alt="">
+            <h1>Blinding Lights</h1>
+            <p class="opacity-40">The Weeknd</p>
+        </div>
 
-    <div>
-        <img src="/Assets/shawn_mendes.jpg" alt="">
-        <h1>There's Nothing Holding Me Back</h1>
-        <h2>Shawn Mendes</h2>
-    </div>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/shawn_mendes.jpg" class="rounded-full h-16" alt="">
+            <h1>There's Nothing Holding Me Back</h1>
+            <h2>Shawn Mendes</h2>
+        </div>
 
-    <div>
-        <img src="/Assets/Olivia Rodrigo.jpg" alt="">
-        <h1>Traitor</h1>
-        <h2>Olivia Rodrigo</h2>
-    </div>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/Olivia Rodrigo.jpg" class="rounded-full h-16" alt="">
+            <h1>Traitor</h1>
+            <h2>Olivia Rodrigo</h2>
+        </div>
 
-    <div>
-        <img src="/Assets/queen.jpg" alt="">
-        <h1>Another One Bites The Dust</h1>
-        <h2>Queen</h2>
-    </div>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/queen.jpg" class="rounded-full h-16" alt="">
+            <h1>Another One Bites The Dust</h1>
+            <h2>Queen</h2>
+        </div>
 
-    <div>
-        <img src="/Assets/moth to a flame.jpg" alt="">
-        <h1>Moth To A Flame</h1>
-        <h2>Swedish House Mafia, The Weeknd</h2>
-    </div>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/moth to a flame.jpg" class="rounded-full h-16" alt="">
+            <h1>Moth To A Flame</h1>
+            <h2>Swedish House Mafia, The Weeknd</h2>
+        </div>
 
-    <div>
-        <img src="/Assets/those eyes.jpg" alt="">
-        <h1>Those Eyes</h1>
-        <h2>New West</h2>
+        <div class="flex p-4 gap-2">
+            <img src="/Assets/those eyes.jpg" class="rounded-full h-16" alt="">
+            <h1>Those Eyes</h1>
+            <h2>New West</h2>
+        </div>
     </div>
 </main>
+    <script src="/script.js"></script>
 </body>
 </html>
