Modificaciones Reproductor Día Viernes

--- a/index.html
+++ b/index.html
@@ -17,60 +17,63 @@
     <header>
         <nav class="navbar">
             <img src="/Assets/Logo.svg" alt="">
+            <ul>
+                <li>BEATS</li>
+            </ul>
         </nav>
     </header>
 
-<main>
-    <div id="track-list">
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/song.jpg" class="rounded-full h-16" alt="">
-            <h3>Die With A Smile</h3> 
-            <p class="opacity-40">Lady Gaga, Bruno Mars</p>
-        </div>
+    <main>
+        <div id="track-list" class="grid grid-cols-2 gap-4">
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/song.jpg" class="rounded-full h-16" alt="">
+                <h3>Die With A Smile</h3>
+                <p class="opacity-40">Lady Gaga, Bruno Mars</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/Rawayana.jpg" class="rounded-full h-16" alt="">
-            <h1>Hora Loca</h1>
-            <p class="opacity-40">Rawayana, Monsiur Perine<p>
-        </div>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/Rawayana.jpg" class="rounded-full h-16" alt="">
+                <h1>Hora Loca</h1>
+                <p class="opacity-40">Rawayana, Monsiur Perine</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/the weeknd.jpg" class="rounded-full h-16" alt="">
-            <h1>Blinding Lights</h1>
-            <p class="opacity-40">The Weeknd</p>
-        </div>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/the weeknd.jpg" class="rounded-full h-16" alt="">
+                <h1>Blinding Lights</h1>
+                <p class="opacity-40">The Weeknd</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/shawn_mendes.jpg" class="rounded-full h-16" alt="">
-            <h1>There's Nothing Holding Me Back</h1>
-            <h2>Shawn Mendes</h2>
-        </div>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/shawn_mendes.jpg" class="rounded-full h-16" alt="">
+                <h1>There's Nothing Holding Me Back</h1>
+                <p class="opacity-40">Shawn Mendes</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/Olivia Rodrigo.jpg" class="rounded-full h-16" alt="">
-            <h1>Traitor</h1>
-            <h2>Olivia Rodrigo</h2>
-        </div>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/Olivia Rodrigo.jpg" class="rounded-full h-16" alt="">
+                <h1>Traitor</h1>
+                <p class="opacity-40">Olivia Rodrigo</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/queen.jpg" class="rounded-full h-16" alt="">
-            <h1>Another One Bites The Dust</h1>
-            <h2>Queen</h2>
-        </div>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/queen.jpg" class="rounded-full h-16" alt="">
+                <h1>Another One Bites The Dust</h1>
+                <p class="opacity-40">Queen</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/moth to a flame.jpg" class="rounded-full h-16" alt="">
-            <h1>Moth To A Flame</h1>
-            <h2>Swedish House Mafia, The Weeknd</h2>
-        </div>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/moth to a flame.jpg" class="rounded-full h-16" alt="">
+                <h1>Moth To A Flame</h1>
+                <p class="opacity-40">Swedish House Mafia, The Weeknd</p>
+            </div>
 
-        <div class="flex p-4 gap-2">
-            <img src="/Assets/those eyes.jpg" class="rounded-full h-16" alt="">
-            <h1>Those Eyes</h1>
-            <h2>New West</h2>
+            <div class="flex flex-col p-4 gap-2">
+                <img src="/Assets/those eyes.jpg" class="rounded-full h-16" alt="">
+                <h1>Those Eyes</h1>
+                <p class="opacity-40">New West</p>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
     <script src="/script.js"></script>
 </body>
 </html>
