--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         </nav>
     </header>
 
-    <main>
-        <div id="track-list" class="grid grid-cols-2 gap-4">
-            <div class="flex flex-col p-4 gap-2">
+    <main class="flex">
+        <!-- Este div es el lado izquierdo donde se encuentran las canciones -->
+        <div id="track-list" class="flex-1 gap-4 p-4">
+            <!-- <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/song.jpg" class="rounded-full h-16" alt="">
                 <h3>Die With A Smile</h3>
                 <p class="opacity-40">Lady Gaga, Bruno Mars</p>
@@ -71,8 +72,36 @@
                 <img src="/Assets/those eyes.jpg" class="rounded-full h-16" alt="">
                 <h1>Those Eyes</h1>
                 <p class="opacity-40">New West</p>
-            </div>
+            </div> -->
         </div>
+
+        <!-- Línea vertical -->
+        <div class="w-px bg-custom-purple"></div>
+
+        <!-- Este es el lado derecho donde está la canción actual -->
+         <div class="w-96 ml-8 mr-8">
+            <img src="/Assets/song.jpg" alt="">
+
+            <div>
+                <h2>Die With A Smile</h2>
+                <p>Lady Gaga, Bruno Mars</p>
+            </div>
+
+            <div class="flex justify-center space-x-4">
+                <!-- Botones del reproductor -->
+                <button>
+                    <img src="/Assets/back.png" alt="Back">
+                </button>
+                <button>
+                    <img src="/Assets/play.png" alt="Play/Pause">
+                </button>
+                <button>
+                    <img src="/Assets/next.png" alt="Next">
+                </button>
+            </div>
+
+         </div>
+
     </main>
     <script src="/script.js"></script>
 </body>
