--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beats</title>
-
     <meta name="description" content="Disfruta de tu música favorita con nuestro reproductor intuitivo y versátil. Calidad de sonido superior en todos tus dispositivos.">
     <meta name="keywords" content="Musica, musica latina, musica pop, musica alternativa, rock, playlist">
-
     <link rel="stylesheet" href="/style.css">
-
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
@@ -27,59 +24,49 @@
         <!-- Este div es el lado izquierdo donde se encuentran las canciones -->
         <div id="track-list" class="flex-1 gap-4 p-4">
             <!-- <div class="flex flex-col p-4 gap-2">
-    <main class="flex">
-        <!-- Este div es el lado izquierdo donde se encuentran las canciones -->
-        <div id="track-list" class="flex-1 gap-4 p-4">
-            <!-- <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/song.jpg" class="rounded-full h-16" alt="">
                 <h3>Die With A Smile</h3>
                 <p class="opacity-40">Lady Gaga, Bruno Mars</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/Rawayana.jpg" class="rounded-full h-16" alt="">
                 <h1>Hora Loca</h1>
                 <p class="opacity-40">Rawayana, Monsiur Perine</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/the weeknd.jpg" class="rounded-full h-16" alt="">
                 <h1>Blinding Lights</h1>
                 <p class="opacity-40">The Weeknd</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/shawn_mendes.jpg" class="rounded-full h-16" alt="">
                 <h1>There's Nothing Holding Me Back</h1>
                 <p class="opacity-40">Shawn Mendes</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/Olivia Rodrigo.jpg" class="rounded-full h-16" alt="">
                 <h1>Traitor</h1>
                 <p class="opacity-40">Olivia Rodrigo</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/queen.jpg" class="rounded-full h-16" alt="">
                 <h1>Another One Bites The Dust</h1>
                 <p class="opacity-40">Queen</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/moth to a flame.jpg" class="rounded-full h-16" alt="">
                 <h1>Moth To A Flame</h1>
                 <p class="opacity-40">Swedish House Mafia, The Weeknd</p>
             </div>
-
             <div class="flex flex-col p-4 gap-2">
                 <img src="/Assets/those eyes.jpg" class="rounded-full h-16" alt="">
                 <h1>Those Eyes</h1>
                 <p class="opacity-40">New West</p>
+            </div>
             </div> -->
         </div>
 
-        <!-- Línea vertical -->
+        <!-- Línea vertical con color personalizado -->
         <div class="w-px bg-custom-purple"></div>
 
         <!-- Este es el lado derecho donde está la canción actual -->
