Modificaciones Reproductor Día Martes (Prototipo funcional)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Disfruta de tu música favorita con nuestro reproductor intuitivo y versátil. Calidad de sonido superior en todos tus dispositivos.">
     <meta name="keywords" content="Musica, musica latina, musica pop, musica alternativa, rock, playlist">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/Assets/Logo.svg" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
